started implementing dark mode need to fix localstorage setting

--- a/styles.css
+++ b/styles.css
@@ -97,3 +97,14 @@ footer{
 main{
     flex:1;
 }
+
+
+.dark-mode{
+    background-color: rgb(18, 24, 36);
+    color: white;
+}
+
+.light-mode{
+    background-color: rgb(154, 205, 227);
+    color:black;
+}
